--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 64px 0px 32px;
+    padding: 64px 0px 0px 32px;
     gap: 24px;
     margin: 0 auto;
 
-    width: 375px;
-    height: 892px;
+    width: 100%;
+    height: 100%;
 
     background: #FFFFFF;
 }
