--- a/src/components/content.css
+++ b/src/components/content.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px;
     gap: 24px;
-    
+    padding: 0;
+   
     width: 343px;
     height: 528px;
     
@@ -17,7 +17,7 @@
 /* Auto layout */
 
         display: flex;
-        flex-direction: row;
+        
         justify-content: center;
         align-items: center;
         padding: 24px 32px;
@@ -34,21 +34,13 @@
         line-height: 20px;
 /* identical to box height, or 143% */
 
-        display: flex;
-        align-items: center;
-        text-align: center;
-
+      
 /* Gray/900 */
 
 color: #101828;
 
 
-/* Inside auto layout */
 
-flex: none;
-order: 0;
-flex-grow: 0;
-/* Gray/200 */
 
 background: #EAECF0;
 /* Gray/200 */
@@ -56,11 +48,6 @@ background: #EAECF0;
 border: 1px solid #EAECF0;
 border-radius: 8px;
 
-/* Inside auto layout */
-
-flex: none;
-order: 0;
-flex-grow: 0;
 }
 .Main-content> a:hover{
     background-color: #dfe1e6;
