--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,10 +3,11 @@
         flex-direction: column;
         align-items: center;
         gap: 24px;
-        width: 343px;
-        height: 140px;
-        margin: 0;
-
+        width: 100%;
+       
+        
+       
+       
 }
 
 #profile__img{
@@ -27,11 +28,7 @@
     
         
         /* Inside auto layout */
-        
-        flex: none;
-        order: 0;
-        flex-grow: 0;
-        z-index: 0;
+    
 
 }
 #slack{
@@ -39,7 +36,7 @@
         margin: 0;}
 
 .share-avatar{
-            position: absolute;
+            position:absolute;
             background:url(../assets/avatar-share-button.png);
             background-repeat: no-repeat;
             background-position: center center;
@@ -54,7 +51,6 @@
         border: 50px;
         width: 40px;
         height: 40px;
-
 
 }
 .header> p{
@@ -127,9 +123,8 @@
 
         .share-avatar{
                 background: url(../assets/avatar-share-button2.png);
-               margin-right: 300px;
-               cursor: pointer;
-
+                cursor: pointer;
+                margin-right: 300px;
         }
         .share-avatar:hover{
                 background-color: #dfe1e6; 
