style:updated header image

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -20,7 +20,7 @@
         width: 88px;
         height: 88px;
         
-        background: url(../public/profile3.jpg);
+        background: url(../profile3.jpg);
         border-radius: 275px;
         background-repeat: no-repeat;
         background-position: center center;
