--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 64px 30px;
+    padding: 64px 30px 100px;
     gap: 48px;
     
-     
+    
     width: 375px;
-    /* height: 884px; */
+ 
  
     
     /* Base/White */
@@ -309,6 +309,17 @@ line-height: 24px;
 color: #FFFFFF;
 
 }
+.error{
+   color: red;
+   font-family: 'Inter';
+font-style: normal;
+font-weight: 200;
+font-size: 16px;
+line-height: 16px;
+margin: 0px;
+padding: 0px;
+
+}
 
 @media screen and (min-width:1440px){
        .myContact{
@@ -317,7 +328,7 @@ color: #FFFFFF;
         justify-content: center;
         align-items: center;
         padding: 0px 0px 96px;
-        gap: 64px;
+        gap: 94px;
       margin-top: 0px;
         width: 1440px;
         /* height: 960px; */
