--- a/src/components/content.css
+++ b/src/components/content.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     gap: 24px;
-    padding: 0;
-   
+    /* margin-bottom: 55px; */
+    
     width: 343px;
 
     
